<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="cmparts_title">LineageOS Settings</string>
    <string name="loading">Loading\u2026</string>
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
    <string name="reset">Reset</string>
    <string name="advanced">Advanced</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="privacy_settings_title">Privacy</string>
    <string name="privacy_settings_category" translatable="false">LineageOS</string>
    <string name="privacy_guard_switch_label">Enable Privacy Guard</string>
    <string name="privacy_guard_dlg_title">Enable Privacy Guard?</string>
    <string name="privacy_guard_dlg_text">When Privacy Guard is enabled, the app will not be able to access personal data such as contacts, messages or call logs.</string>
    <string name="privacy_guard_dlg_system_app_text">When enabling Privacy Guard for a built-in app, the app will not be able to access or provide personal data. This may cause other apps to misbehave.</string>
    <string name="privacy_guard_default_title">Enabled by default</string>
    <string name="privacy_guard_default_summary_on">Privacy Guard is enabled</string>
    <string name="privacy_guard_default_summary">Enable by default for newly-installed apps</string>
    <string name="privacy_guard_manager_summary">Manage which apps have access to your personal data</string>
    <string name="privacy_guard_no_user_apps">No apps are installed</string>
    <string name="privacy_guard_help_title">Help</string>
    <string name="privacy_guard_reset_title">Reset</string>
    <string name="privacy_guard_reset_text">Reset permissions?</string>
    <string name="privacy_guard_help_text">In this screen you can choose which apps Privacy Guard should be active for by simply tapping on them. Selected apps will not be able to access your personal data such as contacts, messages or call logs. Long pressing an app\'s entry opens its app details screen.\n\nBuilt-in apps are not shown by default but can be revealed by selecting the respective menu option.</string>
    <string name="privacy_guard_manager_show_system_apps">Show built-in apps</string>
    <string name="privacy_guard_advanced_settings_title">Advanced</string>
    <string name="privacy_guard_notification_title">Show notification</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="default_time">Normal</string>
    <string name="custom_time">Custom</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="brightness">Brightness level</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="pulse_length_long">Long</string>
    <string name="pulse_length_very_long">Very long</string>
    <string name="pulse_speed_very_fast">Very fast</string>
    <string name="pulse_speed_fast">Fast</string>
    <string name="pulse_speed_normal">Normal</string>
    <string name="pulse_speed_slow">Slow</string>
    <string name="pulse_speed_very_slow">Very slow</string>
    <string name="battery_light_title">Battery light</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_list_title">Colors</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Charging</string>
    <string name="battery_light_full_color_title">Charged (90%)</string>
    <string name="battery_light_really_full_color_title">Charged (100%)</string>
    <string name="notification_light_title">Notification light</string>
    <string name="notification_light_general_title">General</string>
    <string name="notification_light_advanced_title">Advanced</string>
    <string name="notification_light_applist_title">Apps</string>
    <string name="notification_light_phonelist_title">Phone</string>
    <string name="notification_light_use_custom">Use custom values</string>
    <string name="notification_light_default_value">Default</string>
    <string name="notification_light_missed_call_title">Missed call</string>
    <string name="notification_light_voicemail_title">Voicemail</string>
    <string name="notification_light_brightness" translatable="false">@string/brightness</string>
    <string name="notification_light_screen_on">Lights with screen on</string>
    <string name="notification_light_zen_mode">Lights in Do Not Disturb mode</string>
    <string name="notification_light_use_multiple_leds">Multiple LEDs</string>
    <string name="keywords_lights_brightness_level">dim leds brightness</string>
    <string name="notification_light_automagic">Choose colors automatically</string>
    <string name="notification_light_automagic_summary">Choosing colors automatically</string>
    <string name="led_notification_title">Light settings</string>
    <string name="led_notification_text">LED light enabled by settings</string>
    <string name="notification_light_no_apps_summary">To add per app control, activate \'%1$s\' and press \'\u002b\' on the menu bar</string>
    <string name="live_display_summary">Optimize your screen based on time of day and ambient conditions to improve readability and reduce eyestrain</string>
    <string name="live_display_mode">Display mode</string>
    <string name="live_display_color_temperature_title">Color temperature</string>
    <string name="live_display_color_temperature_summary">Day: <xliff:g id="day_temperature">%1$d</xliff:g>K  Night: <xliff:g id="night_temperature">%2$d</xliff:g>K</string>
    <string name="live_display_color_temperature_label"><xliff:g id="degrees">%1$d</xliff:g>K</string>
    <string name="live_display_day">Day</string>
    <string name="live_display_night">Night</string>
    <string name="live_display_outdoor_mode_title">Automatic outdoor mode</string>
    <string name="live_display_outdoor_mode_summary">Increase brightness and saturation automatically under bright sunlight</string>
    <string name="live_display_low_power_title">Reduce power consumption</string>
    <string name="live_display_low_power_summary">Adjust display for lowest power consumption without degradation</string>
    <string name="live_display_enhance_color_title">Enhance colors</string>
    <string name="live_display_enhance_color_summary">Improve color vibrance of flesh tones, scenery, and other images</string>
    <string name="live_display_color_profile_title">Color profile</string>
    <string name="live_display_color_profile_standard_title">Standard</string>
    <string name="live_display_color_profile_standard_summary">Accurate colors and bright whites</string>
    <string name="live_display_color_profile_natural_title">Natural</string>
    <string name="live_display_color_profile_natural_summary">Realistic colors and flesh tones</string>
    <string name="live_display_color_profile_dynamic_title">Dynamic</string>
    <string name="live_display_color_profile_dynamic_summary">Enhanced colors and bright whites</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="status_bar_clock_title">Clock and date</string>
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_brightness_category">Brightness</string>
    <string name="status_bar_brightness_slider_title">Brightness slider</string>
    <string name="status_bar_brightness_slider_summary">Adjust brightness from the Quick Settings</string>
    <string name="status_bar_brightness_slider_auto_title">Auto brightness</string>
    <string name="status_bar_brightness_slider_auto_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_bluetooth_icon">Bluetooth icon</string>
    <string name="status_bar_bluetooth_icon_summary">Show icon when it is enabled but not connected</string>
    <string name="show_next_alarm_icon_title">Alarm icon</string>
    <string name="show_next_alarm_icon_summary">Show icon in the expanded status bar when an alarm is set</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_summary">Enable various network traffic options in the status bar</string>
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="status_bar_date">Date</string>
    <string name="status_bar_date_summary">Display the date in the status bar</string>
    <string name="status_bar_date_style">Date style</string>
    <string name="status_bar_date_format">Date format</string>
    <string name="status_bar_date_position">Date position</string>
    <string name="wifi_status_bar_ssid_title">Show WiFi SSID</string>
    <string name="wifi_status_bar_ssid_summary">Show the WiFi SSID of a connected network in the status bar</string>
    <string name="carrier_label_settings_title">Show carrier label</string>
    <string name="carrier_label_settings_summary">Show the carrier label in the status bar</string>
    <string name="battery_bar_location">Battery bar</string>
    <string name="battery_bar_style_title">Battery bar style</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion.</string>
    <string name="status_bar_custom_header_title">Custom headers</string>
    <string name="status_bar_custom_header_summary">Enable custom images in the notification panel</string>
    <string name="daylight_header_pack_title">Header image pack</string>
    <string name="status_bar_custom_header_shadow_title">Darken header image</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="custom_header_provider_title">Header provider</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary">Long press on any image to use for static mode</string>
</resources>