<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2014-2016 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lineage="http://schemas.android.com/apk/res/cyanogenmod.platform"
    android:key="status_bar_settings"
    android:title="@string/status_bar_title">

    <cyanogenmod.preference.CMSystemSettingListPreference
        android:key="qs_quick_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown_title"
        android:entries="@array/status_bar_quick_qs_pulldown_entries"
        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
        android:defaultValue="0" />

    <cyanogenmod.preference.CMSystemSettingListPreference
        android:key="qs_smart_pulldown"
        android:title="@string/smart_pulldown_title"
        android:entries="@array/smart_pulldown_entries"
        android:entryValues="@array/smart_pulldown_values"
        android:defaultValue="0" />

    <PreferenceScreen
        android:key="status_bar_custom_header"
        android:fragment="org.cyanogenmod.cmparts.statusbar.CustomHeaders"
	    android:summary="@string/status_bar_custom_header_summary"
	    android:title="@string/status_bar_custom_header_title" />

    <PreferenceScreen
        android:key="network_traffic_state"
        android:fragment="org.cyanogenmod.cmparts.networktraffic.NetworkTraffic"
	    android:summary="@string/network_traffic_summary"
	    android:title="@string/network_traffic_title" />

    <cyanogenmod.preference.CMSystemSettingSwitchPreference
        android:key="status_bar_show_carrier"
        android:title="@string/carrier_label_settings_title"
        android:summary="@string/carrier_label_settings_summary"
        android:defaultValue="false" />

	<cyanogenmod.preference.CMSystemSettingSwitchPreference
        android:key="wifi_status_bar_ssid"
        android:title="@string/wifi_status_bar_ssid_title"
        android:summary="@string/wifi_status_bar_ssid_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/status_bar_icons_title">

	    <cyanogenmod.preference.CMSystemSettingSwitchPreference
            android:key="show_bluetooth_icon"
            android:title="@string/status_bar_bluetooth_icon"
            android:summary="@string/status_bar_bluetooth_icon_summary"
            android:defaultValue="true" />

        <cyanogenmod.preference.CMSystemSettingSwitchPreference
            android:key="show_next_alarm_icon"
            android:title="@string/show_next_alarm_icon_title"
            android:summary="@string/show_next_alarm_icon_summary"
            android:defaultValue="true" />

        <cyanogenmod.preference.CMSystemSettingSwitchPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="true" />

        <PreferenceScreen
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.TunerActivity">
                <extra android:name="tuner" android:value="status_bar" />
            </intent>
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_clock_title">

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_position_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_clock_position_title"
            android:entries="@array/status_bar_clock_position_entries"
            android:entryValues="@array/status_bar_clock_position_values"
            android:defaultValue="0" />

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_am_pm"
            android:title="@string/status_bar_am_pm_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/status_bar_am_pm_entries"
            android:entryValues="@array/status_bar_am_pm_values"
            android:defaultValue="2" />

         <ListPreference
            android:key="status_bar_date"
            android:title="@string/status_bar_date"
            android:summary="@string/status_bar_date_summary"
            android:entries="@array/status_bar_date_entries"
            android:entryValues="@array/status_bar_date_values" />

         <ListPreference
            android:key="status_bar_date_position"
            android:title="@string/status_bar_date_position"
            android:entries="@array/status_bar_date_position_entries"
            android:entryValues="@array/status_bar_date_position_values" />

         <ListPreference
            android:key="status_bar_date_style"
            android:title="@string/status_bar_date_style"
            android:entries="@array/status_bar_date_style_entries"
            android:entryValues="@array/status_bar_date_style_values" />

         <ListPreference
            android:key="status_bar_date_format"
            android:title="@string/status_bar_date_format"
            android:entries="@array/status_bar_date_format_entries_values"
            android:entryValues="@array/status_bar_date_format_entries_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_battery_title">

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="2" />

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_show_battery_percent"
            android:title="@string/status_bar_battery_percentage_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_percentage_title"
            android:entries="@array/status_bar_battery_percentage_entries"
            android:entryValues="@array/status_bar_battery_percentage_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="battery_bar_list"
            android:title="@string/battery_bar_location"
            android:entries="@array/battery_bar_entries"
            android:entryValues="@array/battery_bar_values" />

        <ListPreference
            android:key="battery_bar_style"
            android:title="@string/battery_bar_style_title"
            android:entries="@array/battery_bar_style_entries"
            android:entryValues="@array/battery_bar_style_values" />

        <ListPreference
            android:key="battery_bar_thickness"
            android:title="@string/battery_bar_thickness_title"
            android:entries="@array/battery_bar_thickness_entries"
            android:entryValues="@array/battery_bar_thickness_values" />

        <SwitchPreference
            android:key="battery_bar_animate"
            android:title="@string/battery_bar_animate_title"
            android:summary="@string/battery_bar_animate_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_brightness_category">

        <cyanogenmod.preference.CMSecureSettingSwitchPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/status_bar_brightness_slider_title"
            android:summary="@string/status_bar_brightness_slider_summary"
            android:defaultValue="true" />

        <cyanogenmod.preference.CMSecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/status_bar_brightness_slider_auto_title"
            android:summary="@string/status_bar_brightness_slider_auto_summary"
            android:dependency="qs_show_brightness_slider"
            lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
            android:defaultValue="true" />

        <cyanogenmod.preference.CMSystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
