<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen
    android:title="@string/status_bar_custom_header_title"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/org.cyanogenmod.cmparts">

        <ListPreference
            android:key="custom_header_provider"
            android:title="@string/custom_header_provider_title"
            android:persistent="false"
            android:entries="@array/custom_header_provider_entries"
            android:entryValues="@array/custom_header_provider_values" />

        <ListPreference
            android:key="daylight_header_pack"
            android:title="@string/daylight_header_pack_title"
            android:persistent="false" />

        <PreferenceScreen
            android:key="custom_header_browse"
            android:title="@string/custom_header_browse_title"
            android:summary="@string/custom_header_browse_summary"
            android:persistent="false" >
                <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.omnirom.omnistyle"
                    android:targetClass="org.omnirom.omnistyle.BrowseHeaderActivity" />
        </PreferenceScreen>

        <org.cyanogenmod.cmparts.widget.TrafficBarPreference
            android:key="status_bar_custom_header_shadow"
            android:title="@string/status_bar_custom_header_shadow_title"
            android:summary="@string/status_bar_custom_header_shadow_summary"
            android:max="255"
            settings:minimum="0"
            settings:units=""
            android:dependency="custom_header_provider"
            android:persistent="false" />

</PreferenceScreen>
